# v2ex_tx2json_python

./: .env.example  MANIFEST.in  PUBLISHING.md  README.md  bump-version.sh  main.py  publish.sh  pyproject.toml  test-publish.sh
src/v2ex_tx2json/: __init__.py  core.py
tests/: test_core.py
